force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Assign_Resource_Custom_Lookup_Columns__c.field-meta.xml
<CustomField>
    <fullName>pse__Assign_Resource_Custom_Lookup_Columns__c</fullName>
    <defaultValue>&apos;Name,Account.Name,Is_Resource__c,Is_Resource_Active__c,Resource_Role__c&apos;</defaultValue>
    <label>Assign Resource Custom Lookup Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>