force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Display_Planned_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Display_Planned_Bill_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to display the Planned Bill Rate field on the Mass Assign Resources page.</inlineHelpText>
    <label>Display Planned Bill Rate</label>
    <type>Checkbox</type>
</CustomField>